--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body class="manrope">
-    <header class="md:container mx-auto py-5 mb-16">
+    <header class=" py-5 mb-16">
         <!-- navbar section -->
         <div class="navbar bg-base-100">
             <div class="navbar-start">
@@ -71,6 +71,8 @@
                         <li><a>Portfolio</a></li>
                         <li><a>Blogs</a></li>
                         <li><a>Contact Us</a></li>
+                        <li><i
+                            class="fa-solid fa-magnifying-glass  bg-black text-white  rounded-full text-2xl  h-8 w-8 p-1 text-center"></i></li>
                     </ul>
                 </div>
                 <div class="flex gap-3 justify-center items-center">
@@ -92,7 +94,7 @@
                     <li><a class="text-xl text-gray-500">Contact Us</a></li>
                 </ul>
             </div>
-            <div class="navbar-end flex sm:flex-row gap-8">
+            <div class="navbar-end gap-8 hidden lg:flex">
                 <div><i
                         class="fa-solid fa-magnifying-glass  bg-black text-white  rounded-full text-2xl  h-10 w-10 p-1 text-center"></i>
                 </div>
@@ -108,18 +110,16 @@
         <!-- header Text and banner site -->
         <!-- banner container -->
         <div class="flex flex-col justify-center items-center text-center">
-            <!-- img part -->
             <div class="mb-6">
                 <img src="/assets/banner.png" alt="">
             </div>
-            <!--text content  -->
             <div>
                 <h1 class="text-7xl font-bold mb-6 sm:text-4xl">A barn house of this design has <br> a striking
                     appearance</h1>
                 <p class="text-xl mb-6 ">The barn house captivates with its blend of rustic charm and modern
                     sophistication, featuring
                     weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-                <button class="text-xl font-bold bg-primary-lightgreencolor border-none rounded-full p-3 font-bold">View
+                <button class="text-xl font-bold bg-primary-lightgreencolor border-none rounded-full p-3">View
                     Details <i
                         class="fa-solid fa-arrow-right bg-primary-greencolor text-black  rounded-full text-2xl -rotate-45 h-8 w-8 text-center "></i></button>
             </div>
@@ -133,7 +133,7 @@
         <!-- Thought Section -->
         <section class="  mx-auto sm:w-full lg:px-72 bg-primary-bg ">
             <!-- Thought Container -->
-            <img src="/assets/Vector.png" class="absolute mt-2 -rotate-60 mr-10 alt="">
+            <img src="/assets/Vector.png" class="absolute mt-2 -rotate-60 mr-10">
             <div class=" grid grid-cols-1 md:grid-cols-2 gap-20 justify-center items-center py-16 ">
                  <!-- Thought Text Part -->
              <div class=" flex-1">
@@ -411,14 +411,38 @@
                 </div>
             </form>
            </div>
-        </section>
-
-
-
-
     </main>
 
-    <footer>
+    <footer class="bg-black py-28">
+
+      
+            <div class="mb-6">
+                <h1 class="text-4xl font-bold text-white text-center mb-6"><i
+                    class="fa-solid fa-arrow-right bg-primary-greencolor rounded-full text-2xl -rotate-45 h-8 w-8 text-center "></i> Rinterio</h1>
+
+                <p class="text-center text-gray-500 text-xl">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+            </div>
+
+            <div class="">
+                <ul class="lg:flex sm:flex-cols justify-center items-center gap-10">
+
+                    <li><a class="text-xl text-white">Home</a></li>
+                    <li><a class="text-xl text-white">Services</a></li>
+                    <li><a class="text-xl text-white">Portfolio</a></li>
+                    <li><a class="text-xl text-white">Blogs</a></li>
+                    <li><a class="text-xl text-white">Contact Us</a></li>
+
+                </ul>
+    
+            </div>
+           <div class="text-center mt-6">
+            <button class="text-xl bg-primary-greencolor border-none rounded-3xl p-2 font-bold">Book Consultant <i
+                class="fa-solid fa-arrow-right bg-black text-white  rounded-full text-2xl -rotate-45 h-8 w-8 text-center "></i></button>
+           </div>
+
+
+
 
     </footer>
 
