--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <!-- banner container -->
         <div class="flex flex-col justify-center items-center text-center">
             <div class="mb-6">
-                <img src="assets/banner.png" alt="">
+                <img src="..assets/banner.png" alt="">
             </div>
             <div>
                 <h1 class="text-7xl font-bold mb-6 sm:text-4xl">A barn house of this design has <br> a striking
@@ -133,7 +133,7 @@
         <!-- Thought Section -->
         <section class="  mx-auto sm:w-full lg:px-72 bg-primary-bg ">
             <!-- Thought Container -->
-            <img src="assets/Vector.png" class="absolute mt-2 -rotate-60 mr-10">
+            <img src="..assets/Vector.png" class="absolute mt-2 -rotate-60 mr-10">
             <div class=" grid grid-cols-1 md:grid-cols-2 gap-20 justify-center items-center py-16 ">
                  <!-- Thought Text Part -->
              <div class=" flex-1">
@@ -149,7 +149,7 @@
             <div class="flex-1 mb-6 mx-auto">
                 <div class="card card-side bg-base-100 shadow-xl px-4">
                     <figure>
-                        <img src="assets/commercial.png" alt="pic" />
+                        <img src="..assets/commercial.png" alt="pic" />
                     </figure>
                     <div class="card-body">
                         <h2 class="card-title">commercial</h2>
@@ -163,7 +163,7 @@
             <div class="flex-1">
                 <div class="card card-side bg-base-100 shadow-xl px-4">
                     <figure>
-                        <img src="assets/residential.png" alt="pic" />
+                        <img src="..assets/residential.png" alt="pic" />
                     </figure>
                     <div class="card-body">
                         <h2 class="card-title">Residential</h2>
@@ -179,7 +179,7 @@
 
             <!-- Thought image part -->
             <div class="flex- mx-auto">
-                <img src="/assets/Rectangle.png" alt="">
+                <img src="../assets/Rectangle.png" alt="">
             </div>
             </div>
 
@@ -259,7 +259,7 @@
                     <div class="card card-compact bg-base-100 w-96 shadow-xl p-10 flex items-start mb-4 bg-purple-300 ">
                         <figure>
                             <div>
-                                <img src="assets/concept.png" alt="Concept" />
+                                <img src="..assets/concept.png" alt="Concept" />
                             </div>
                         </figure>
                         <div class="card-body">
@@ -273,7 +273,7 @@
                         <div class="card card-compact bg-base-100 w-96 shadow-xl p-10 flex items-start mb-4 bg-yellow-300">
                             <figure>
                                 <div>
-                                    <img src="assets/flow-chart.png" alt="Concept" />
+                                    <img src="..assets/flow-chart.png" alt="Concept" />
                                 </div>
                             </figure>
                             <div class="card-body">
@@ -287,7 +287,7 @@
                         <div class="card card-compact bg-base-100 w-96 shadow-xl p-10 flex items-start mb-4 bg-green-300">
                             <figure>
                                 <div>
-                                    <img src="assets/vision.png" alt="Concept" />
+                                    <img src="..assets/vision.png" alt="Concept" />
                                 </div>
                             </figure>
                             <div class="card-body">
@@ -301,7 +301,7 @@
                         <div class="card card-compact bg-base-100 w-96 shadow-xl p-10 flex items-start mb-4 bg-blue-400">
                             <figure>
                                 <div>
-                                    <img src="assets/budget-planning.png" alt="Concept" />
+                                    <img src="..assets/budget-planning.png" alt="Concept" />
                                 </div>
                             </figure>
                             <div class="card-body">
@@ -332,7 +332,7 @@
             <div class="grid grid-cols-1 grid-rows-1 lg:grid-cols-4 md:grid-rows-2 gap-3 mx-auto px-10 w-4/5 py-8">
                 <div class="card card-side bg-base-100  flex float-start p-9 col-span-3 h-72">
                     <figure>
-                        <img src="assets/img1.png" class="h-72 rounded-2xl border-dashed flex-1" alt="Movie" />
+                        <img src="..assets/img1.png" class="h-72 rounded-2xl border-dashed flex-1" alt="Movie" />
                     </figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-bold">Commercial</h2>
@@ -347,18 +347,18 @@
 
 
                 <div class="">
-                    <img src="assets/img2.png" class="p-10 rounded-2xl bg-white h-72 border-dashed" alt="">
+                    <img src="..assets/img2.png" class="p-10 rounded-2xl bg-white h-72 border-dashed" alt="">
 
                 </div>
                 <div>
-                    <img src="assets/img3.png" class="p-10 rounded-2xl bg-white h-72 border-dashed" alt="">
+                    <img src="..assets/img3.png" class="p-10 rounded-2xl bg-white h-72 border-dashed" alt="">
                 </div>
 
 
              
                     <div class="card card-side bg-base-100  flex float-start p-9 col-span-2 h-72 flex-1">
                         <figure>
-                            <img src="assets/img4.png" class="h-72 border-dashed rounded-2xl" alt="Movie" />
+                            <img src="..assets/img4.png" class="h-72 border-dashed rounded-2xl" alt="Movie" />
                         </figure>
                         <div class="card-body">
                             <h2 class="text-2xl font-bold">Commercial</h2>
@@ -370,7 +370,7 @@
                         </div>
                     </div>
                 <div>
-                    <img src="assets/img5.png" class="p-10 rounded-2xl bg-white h-72 border-dashed" alt="">
+                    <img src="..assets/img5.png" class="p-10 rounded-2xl bg-white h-72 border-dashed" alt="">
                 </div>
             </div>
 
@@ -380,7 +380,7 @@
         <!-- Next project section -->
 
         <section class="">
-           <div style="background-image: url(assets/bg.jpg);" class="bg-cover">
+           <div style="background-image: url(..assets/bg.jpg);" class="bg-cover">
             <div class="text-center">
                 <button class="mb-6 p-2 bg-primary-lightgreencolor rounded-3xl">Let’s Connect</button>
                 <h1 class="text-5xl font-bold mb-6">Let’s Discuss Next Project</h1>
