--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div class="card card-compact bg-base-100 w-96 shadow-xl p-10 flex items-start mb-4 bg-green-300">
                             <figure>
                                 <div>
-                                    <img src="./assets/vision.png" alt="Concept" />
+                                    <img src="./assets/concept.png" alt="Concept" />
                                 </div>
                             </figure>
                             <div class="card-body">
@@ -380,7 +380,7 @@
         <!-- Next project section -->
 
         <section class="">
-           <div style="background-image: url(..assets/bg.jpg);" class="bg-cover">
+           <div style="background-image: url(./assets/bg.jpg);" class="bg-cover">
             <div class="text-center">
                 <button class="mb-6 p-2 bg-primary-lightgreencolor rounded-3xl">Let’s Connect</button>
                 <h1 class="text-5xl font-bold mb-6">Let’s Discuss Next Project</h1>
