--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             <!-- Thought image part -->
             <div class="flex- mx-auto">
-                <img src="./assets/rectangle.png" alt="">
+                <img src="./assets/Rectangle.png" alt="">
             </div>
             </div>
 
