--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
         <!-- Work process section -->
         <section class="bg-primary-bg py-16">
-            <div class="sm:flex sm:flex-col sm:items-center sm:justify-center">
+            <div class="">
                 <div class="mx-auto text-center py-8">
                     <button class="mb-6 p-2 bg-white rounded-3xl "><i class="fa-solid fa-arrow-right"></i> How we
                         works</button>
@@ -255,7 +255,7 @@
                 </div>
     
                 <!-- cart section -->
-                <div class="lg:grid lg:grid-cols-4 mx-auto lg:px-16 sm:gap-4 sm:flex sm:flex-col sm:items-center sm:justify-end sm:mx-24 ">
+                <div class="grid grid-cols-4 mx-auto lg:px-16 gap-2 ">
                     <div class="card card-compact bg-base-100 w-96 shadow-xl p-10 flex items-start mb-4 bg-purple-300 ">
                         <figure>
                             <div>
